# productOS

./: .gitignore  .pr_agent.toml  AGENTS.md  CHANGELOG.md  CNAME  CREDITS.md  INSTALL_BETA.md  QA_REPORT_v0.2.2.md  README.md  RELEASE_NOTES.md  TELEMETRY.md  TOOLS.md  chat-fail.txt  e2e-report.txt  fixed-high-concurrency-competitive-research-v1.1.json  index.html  marketingos-uiux.html  marketingos-uiux.md  opencode-smoke-artifact.md  package-lock.json  package.json  playwright.config.ts  pr139.diff  pr139.json  pr_body.md  projects-fail.txt  renovate.json  server_output.txt  src-tauri-capabilities-default-json.json  tailwind.config.js  test_output.txt  update_html.cjs  update_html.js  update_mockups_parker.cjs  update_prototype_pax.cjs  update_runtime.py  verification.txt  vite.config.ts
.claude/: settings.local.json
.openclaw/: workspace-state.json
airesearchfactory-site/: index.html  styles.css
docs/: 01-why-productOS.md  02-main-components.md  03-installation.md  04-projects-guide.md  05-skills-guide.md  06-workflows-guide.md  07-settings-guide.md  08-data-portability.md  09-usage-cost-tracking.md  10-artifacts-guide.md  11-cookbook-use-cases.md  11-litellm-routing-profiles.md  12-integrations-guide.md  13-silent-learner.md  PM_WORKFLOWS.md  README.md  agent-set-feature-development.md  browser-runtime-migration-status.md  marketing-remotion-demos.md  team-context-sharing.md  testing-stack-status.md  update_task_plan.md  ux-change-map.md  ux-flow-map.md
e2e/: app.spec.ts  artifacts.spec.ts  chat.spec.ts  deep_check.spec.ts  features.spec.ts  helpers.ts  layout.spec.ts  projects.spec.ts  server.spec.ts  settings.spec.ts  usage.spec.ts  workflows.spec.ts
invest-intel/: README.md  run-daily.ps1
landing/: compare.html  data-ownership.html  features.html  index.html  script.js  server-stopped.html  sitemap.xml  style.css
memory/: 2026-03-07.md  2026-03-13.md  (+6 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.test-data/projects/e2e-test-project/: README.md
src-tauri/.test-data/projects/e2e-test-project/.metadata/: project.json
src-tauri/.test-data/projects/research-log-project/: README.md
src-tauri/.test-data/projects/research-log-project/.metadata/: project.json  settings.json
src-tauri/.test-data/projects/workflow-test-project/: README.md
src-tauri/.test-data/projects/workflow-test-project/.metadata/: project.json
src-tauri/.test-data/skills/: generate-initiative-draft.md  pptx-pitch-architect.md  template.md
src-tauri/.test-data/skills/.metadata/: format-data.json  generate-initiative-draft.json  generate-prd-draft.json  generate-user-stories.json  pptx-pitch-architect.json  refine-prd-contextually.json  template.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  test_support.rs
src-tauri/src/commands/: artifact_commands.rs  cancellation.rs  channel_commands.rs  chat_commands.rs  config_commands.rs  file_commands.rs  installation_commands.rs  markdown_commands.rs  mcp.rs  menu_commands.rs  mod.rs  project_commands.rs  research_log_commands.rs  secrets_commands.rs  settings_commands.rs  skill_commands.rs  update_commands.rs  workflow_commands.rs
src-tauri/src/config/: mod.rs
src-tauri/src/detector/: claude_code_detector.rs  cli_detector.rs  gemini_detector.rs  mod.rs  ollama_detector.rs
src-tauri/src/directory/: mod.rs
src-tauri/src/installer/: mod.rs
src-tauri/src/models/: ai.rs  artifact.rs  cost.rs  error.rs  mcp.rs  mod.rs  project.rs  research_log.rs  settings.rs  skill.rs  workflow.rs
src-tauri/src/models/ai/: chat_models.rs  mod.rs
src-tauri/src/server/: main.rs  mod.rs
src-tauri/src/server/routes/: artifacts.rs  auth.rs  cancellation.rs  channels.rs  chat.rs  config.rs  files.rs  markdown.rs  mcp_routes.rs  mod.rs  projects.rs  research_log.rs  secrets.rs  settings.rs  skills.rs  system.rs  utils.rs  workflows.rs
src-tauri/src/services/: agent_orchestrator.rs  ai_error_service.rs  ai_provider.rs  ai_service.rs  artifact_service.rs  background_workflow_service.rs  cancellation_service.rs  channel_service.rs  chat_service.rs  claude_service.rs  cli_config_service.rs  context_service.rs  defaults_service.rs  encryption_service.rs  file_service.rs  mcp_service.rs  mod.rs  openai_cli_service.rs  openai_oauth.rs  output_cleaner_service.rs  output_parser_service.rs  pm_skills.rs  project_service.rs  prompt_service.rs  research_log_service.rs  secrets_service.rs  settings_service.rs  skill_service.rs  workflow_params_test.rs  workflow_scheduler_service.rs  workflow_service.rs
src-tauri/src/services/providers/: claude_code.rs  cli_executor.rs  custom_cli.rs  gemini_cli.rs  hosted.rs  litellm.rs  mod.rs  ollama.rs  openai_cli.rs
src-tauri/src/updater/: mod.rs
src-tauri/src/utils/: env.rs  mod.rs  paths.rs  process.rs  user.rs
src-tauri/tests/: artifact_service_test.rs  artifact_test.rs  integration_test.rs  onboarding_test.rs  research_log_test.rs  verification_test.rs
(+422 files in other folders)
