[package]
name = "productos"
version = "0.2.4-beta.1"
description = "Smart academic research and intelligence assistant"
authors = ["productOS Team"]
license = "Apache-2.0"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "^2.9.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde_yaml = "0.9"
notify = "6.1"
walkdir = "2.4"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
cron = "0.12"
thiserror = "1.0"
anyhow = "1.0"
tauri-plugin-shell = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2", version = "2.3.3" }
reqwest = { version = "0.11", features = ["json", "stream"] }
futures = "0.3"
futures-util = "0.3"
tokio-stream = "0.1"
dirs = "5.0"
glob = "0.3"
pulldown-cmark = "0.9"
async-stream = "0.3"

# For encryption
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
base64 = "0.21"

# For OS keyring integration
keyring = "2.2"
tauri-plugin-dialog = "2.4.2"
tempfile = "3.8"
regex = "1.10.2"
once_cell = "1.19"
tokio-util = "0.7"
uuid = { version = "1.0", features = ["v4"] }
sha2 = "0.10"
urlencoding = "2.1"

[dev-dependencies]
tempfile = "3.8"
