[package]
name = "productos"
version = "0.2.7"
description = "Smart academic research and intelligence assistant"
authors = ["productOS Team"]
license = "Apache-2.0"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "productos-server"
path = "src/server/main.rs"

[dependencies]
serde_json = "1.0.138"
serde = { version = "1.0.217", features = ["derive"] }
log = "0.4.25"
tokio = { version = "1.43.0", features = ["full"] }
async-trait = "0.1.86"
serde_yaml = "0.9.34"
notify = "6.1.1"
walkdir = "2.5.0"
chrono = { version = "0.4.39", features = ["serde"] }
chrono-tz = "0.10.1"
cron = "0.12.1"
thiserror = "1.0.69"
anyhow = "1.0.95"
reqwest = { version = "0.11.27", features = ["json", "stream"] }
futures = "0.3.31"
futures-util = "0.3.31"
tokio-stream = { version = "0.1.17", features = ["sync"] }
dirs = "5.0.1"
glob = "0.3.2"
pulldown-cmark = "0.9.6"
async-stream = "0.3.6"

# For encryption
aes-gcm = "0.10.3"
argon2 = "0.5.3"
rand = "0.8.5"
base64 = "0.21.7"

# For OS keyring integration
keyring = "2.3.2"
rfd = { version = "0.15", default-features = false, features = ["tokio", "xdg-portal"] }
tempfile = "3.17.1"
regex = "1.11.1"
once_cell = "1.20.3"
tokio-util = "0.7.13"
uuid = { version = "1.13.1", features = ["v4"] }
sha2 = "0.10.8"
urlencoding = "2.1.3"
pdf-extract = "0.10.0"

# For HTTP companion server
axum = { version = "0.7", features = ["json", "macros", "tracing"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }


[dev-dependencies]
tempfile = "3.8"
